<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondop"
    tools:context=".ui.boton.BotonFragment">


    <TextView
        android:id="@+id/NombreP"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/bordertxt"

        android:fontFamily="casual"
        android:text="@string/NombreP"
        android:textAlignment="center"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/IdentificacionP"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/bordertxt"

        android:fontFamily="casual"
        android:text="@string/IdentificacionP"
        android:textAlignment="center"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApellidoP"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/ApellidoP"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/bordertxt"

        android:fontFamily="casual"
        android:text="@string/ApellidoP"
        android:textAlignment="center"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreP"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/CorreoP"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:background="@drawable/bordertxt"

        android:fontFamily="casual"
        android:text="@string/CorreoP"
        android:textAlignment="center"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdentificacionP"
        app:layout_constraintVertical_bias="0.151" />


    <Button
        android:id="@+id/btn_ya_tiene_cuenta"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/btn_Historial"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="221dp"
        android:layout_height="182dp"
        android:src="@drawable/baseline_add_a_photo_24"
        app:layout_constraintBottom_toTopOf="@+id/NombreP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>