<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoe"
    tools:context=".EntradaActivity">

    <EditText
        android:id="@+id/CorreE"
        android:layout_width="304dp"
        android:layout_height="47dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/CorreoE"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"

        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="304dp"
        android:layout_height="47dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/ContraseñaE"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />


    <ImageView
        android:id="@+id/candado"
        android:layout_width="35dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        app:srcCompat="@drawable/candado" />

    <ImageView
        android:id="@+id/correo"
        android:layout_width="30dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593"
        app:srcCompat="@drawable/usuario" />

    <CheckBox

        android:id="@+id/checkBox2"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginLeft="40dp"
        android:backgroundTint="#9F715D"
        android:fontFamily="casual"
        android:hint="@string/Recuerdame"
        android:textColor="#9F715D"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="126dp"
        android:layout_height="73dp"
        android:background="@drawable/borderboton"
        android:backgroundTint="#A5775A"
        android:fontFamily="casual"
        android:text="@string/btn_entrar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />


    <Button
        android:id="@+id/btnrecuperarcontra"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/olvidaste"
        android:textColor="#633D25"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/btnregistrar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/registrar"
        android:textColor="#633D25"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />


</androidx.constraintlayout.widget.ConstraintLayout>