<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondore"
    tools:context=".RegistroActivity">


    <EditText
        android:id="@+id/correor"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/correoR"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/editTextGenero"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:background="@drawable/bordertxt"
        android:clickable="true"
        android:focusable="false"
        android:fontFamily="casual"
        android:hint="Género"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <EditText
        android:id="@+id/FechaNacimiento"
        android:layout_width="271dp"
        android:layout_height="54dp"

        android:background="@drawable/bordertxt"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="Fecha de Nacimiento"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <EditText
        android:id="@+id/contraseña2"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/contraseñaC"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/identificacion"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <EditText
        android:id="@+id/nombrer"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/contraseña1"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/contraseñaC"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <EditText
        android:id="@+id/apellidor"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/bordertxt"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/apellido"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/btn_registro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="236dp"
        android:layout_height="34dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="624dp"
        android:layout_marginRight="85dp"
        android:background="@drawable/borderboton"
        android:backgroundTint="#A5775A"
        android:fontFamily="casual"
        android:text="@string/btnregistro"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#9F715D"
        android:textColorHint="#9F715D"
        android:textColorLink="#9F715D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ya_tiene_cuenta"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="241dp"
        android:layout_height="38dp"
        android:fontFamily="casual"
        android:text="@string/btn_ya_cuenta"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>